mod hyperref set pdf metadata

--- a/document.tex
+++ b/document.tex
@@ -48,6 +48,9 @@
 \author{Nicholas Weidmann}
 \date{August 2022}
 
+% Konfiguriert hyperref um den Titel und Autor in den PDF Metadaten zu setzen.
+\hypersetup{pdftitle={Vorlage für wissenschaftliche Dokumente mit LaTeX},pdfauthor={Nicholas Weimdann}}
+
 \begin{document}
 
 \begin{titlepage}
