mod tex mod figure example

--- a/document.tex
+++ b/document.tex
@@ -81,7 +81,8 @@
 \subsubsection{Tabellen und Grafiken}
 
 \begin{figure}[ht!]
-  \includegraphics[width=\textwidth]{installoptions_grading.pdf}
+  \centering
+  \includegraphics[width=0.9\textwidth]{installoptions_grading.pdf}
   \caption{Installationsmöglichkeiten Bewertung (eigene Darstellung inspiriert von Technische Universität Braunschweig)\cite{noauthor_gewichtete_nodate}}
   \label{fig:installoptions_grading}
 \end{figure}
